--- a/styles/index.css
+++ b/styles/index.css
@@ -1,235 +1,297 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-} 
+}
 /* body{
   background-color: #f15f5c;
 }  */
 
-
-#log-div{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #E22901;
-margin-top: 20px;
+#log-div {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e22901;
+  margin-top: 20px;
   width: 260px;
-height: 50px;
-border-radius: 50px;
-box-shadow: -10px 6px;
+  height: 50px;
+  border-radius: 50px;
+  box-shadow: -10px 6px;
+  border: 2px solid black;
+}
+.line-break{
+  background-color: #dd6765;
+  height: 50px;
+  width: 90%;
+  margin: auto;
+  padding: 40px;
+}
+.line-break>hr{
+  border: none;
+  height: 1px;
+  background-color: #4c221a;
+  margin: 0;
+  padding: 0;
+}
+
+#log-div>button:nth-child(1){
+  border: 1px solid transparent;
+}
+#log-div>button:nth-child(2){
+  border: 2px solid black;
+}
+
+button {
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 50px;
+  color: beige;
+  width: 120px;
+  height: 40px;
+}
+#b1 {
+  background-color: black;
+}
+#b2 {
+  background-color: #e22901;
+}
+footer {
+  position: relative;
+  width: 90%;
+  margin: auto;
+  background-color: #dd6765;
+  padding: 50px 100px;
+
+  font-weight: bold;
+}
+footer .container1 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+footer .container1 .sec h2 {
+  position: relative;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+footer .container1 .sec p {
+  color: #564f4f;
+}
+footer .container1 .links {
+  position: relative;
+}
+
+footer .container1 .links ul li {
+  list-style: none;
+}
+
+footer .container1 .links ul li a {
+  color: #564f4f;
+  text-decoration: none;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.h4tag:hover {
+  font-size: 30px;
+}
+.menu-btn {
+  display: block;
+
+  width: 50px;
+  height: 40px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: rgb(59, 55, 55);
+  cursor: pointer;
+}
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: auto;
+  padding: 50px 130px;
+  font-weight: bold;
+  /* border: 1px solid black; */
+  width: 100%;
+}
+nav>div:nth-child(2){
+  display: flex;
+  justify-content: space-evenly;
+  width: 40%;
 
 }
 
-  button{
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 50px;
- color: beige;
-    width: 120px;
-    height: 40px;
-  }
-  #b1{
-    background-color: black;
-  }
-  #b2{
-    background-color: #E22901;
-  }
-  footer{
-position: relative;
-width: 90%;
-margin: auto;
-background-color:#dd6765;
-padding: 50px 100px;
-
-font-weight: bold;
-  }
-  footer .container1{
-
-    width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
-    gap: 20px;
-  }
-  footer .container1 .sec h2 {
-position: relative;
-color: #333;
-font-weight: 600;
-margin-bottom: 15px;
-  }
-  footer .container1 .sec p{
-    color: #564f4f;
-  }
-  footer .container1 .links{
-    position: relative;
-  }
-
-
-  footer .container1 .links ul li{
-    list-style: none;
-  }
-
-  
-  footer .container1 .links ul li a{
-   color: #564f4f;
-   text-decoration: none;
-   margin-bottom: 10px;
-   display: inline-block;
-  }
-
-  
-  
-  .h4tag:hover {
-
-    font-size: 30px;
-  }
-  .menu-btn {
-    display: block;
-   
-    width: 50px;
-    height: 40px;
-    background: none;
-    border: none;
-    font-size: 24px;
-    color: rgb(59, 55, 55);
-    cursor: pointer;
-  }
-  nav{
-    display: flex;
-    justify-content: space-between;
-  align-items: center;
-    position: relative;
-    width: 100%;
-    height: auto;
-    padding: 50px 100px;
-    font-weight: bold;
-  }
-  .circle {
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
-    border-radius: 50%;
+.circle {
+  width: 15px;
+  height: 15px;
+  line-height: 15px;
+  border-radius: 50%;
   border: 2px solid;
   text-align: center;
+}
+
+nav ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  width: 40%;
+}
+nav li,
+a {
+  list-style: none;
+  text-decoration: none;
+  color: black;
+  font-weight:900;
+}
+
+.burgerMenu {
+  display: none;
+}
+
+.menu-btn:hover {
+  background-color: black;
+  color: beige;
+
+}
+
+.burgerMenu {
+  display: none;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  background-color: black;
+  position: absolute;
+  top: 3rem;
+  right: 9rem;
+  border-radius: 40px;
   
-    
+}
+
+.burgerMenu a {
+  display: block;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
+  border-radius: 40px;
+}
+.burgerMenu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.cross {
+  position: absolute;
+  top: 5px;
+  right: 90px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1052px) {
+  footer {
+    padding: 40px;
   }
-  
-  nav ul{
+  footer .container1 {
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 10px;
-    width: 40%;
-    
-  }
-  nav li,a{
-    list-style: none;
-    text-decoration: none;
-    color: #564f4f;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
   }
   
-  .burgerMenu{
-    
-    display: none  }
-    
-    .menu-btn:hover{
-      
-      background-color: black;;
-      color: beige;
-      
+}
+  @media screen and (max-width: 732px) {
+    nav ul {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      width: 40%;
     }
-    
+
     .burgerMenu {
       display: none;
       justify-content: flex-end;
       align-items: center;
       flex-direction: column;
-      background-color:black; ;
+      background-color: black;
       position: absolute;
-      top: 3rem;
-      right: 9rem;
-      border-radius: 40px;   }
-      
-      .burgerMenu a {
-        display: block;
-      padding: 10px 15px;
-      color: white;
-      text-decoration: none;
+      top: 5.8rem;
+      right: 6rem;
       border-radius: 40px;
     }
-    .burgerMenu a:hover {
-      background-color: #ddd;
-      color: black;
+    nav{
+      float: none;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+     align-items:space-evenly;
     }
-    .cross{
-      position: absolute;
-      top: 5px;
-      right: 90px;
-      cursor: pointer;
+    nav>div:nth-child(2){
+      display: flex;
+      flex-direction: column;
+     text-align: center;
     }
-    
-      @media screen and (max-width: 1052px) {
-        footer{
-          padding: 40px;
-        }
-        footer .container1 {
-          width: 100%;
-          display: grid;
-          grid-template-columns: 2fr 1fr ;
-          gap: 20px;
-      }
-    
-        
-       
-      @media screen and (max-width: 732px) {
-        
-      
-        nav ul{
-          display: grid;
-          grid-template-columns: repeat(2,1fr);
-      gap: 10px;
-          width: 40%;
-      
-        }
+  }
 
-        .burgerMenu {
-          display: none;
-          justify-content: flex-end;
-          align-items: center;
-          flex-direction: column;
-          background-color:black; ;
-          position: absolute;
-          top: 5.8rem;
-          right: 6rem;
-          border-radius: 40px;   }
-       
-      }
-      }
-      @media screen and (max-width: 606px) {
-        
-        footer .container1 {
-          width: 100%;
-          display: grid;
-          grid-template-columns: 1fr ;
-          gap: 20px;
-      }
-      nav ul{
-      
-        grid-template-columns: repeat(1,1fr);
-      }
-      nav {
- 
+@media screen and (max-width: 606px) {
+  footer .container1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  nav ul {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  nav {
     padding: 40px;
+  }
+  .burgerMenu {
+    top: 5rem;
+    right: 2rem;
+  }
+  
 }
-.burgerMenu {
+/*****IN PROGRESS********/
+/*****TRAVALLER MEDIA QUERY*******/
+
+@media screen and (max-width: 930px){
+ .traveller{
+  
+
+ }
+ .two{
+  display: none;
  
-  top: 5rem;
-  right: 2rem;
-     }
+ }
+
+}
+
+@media screen and (max-width: 620px){
+  .traveller{
+    height: 900px;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap:50px;
+   
+  }
+ .pattern{
+  margin-top: 100px;
+ }
+
+  .traveller-buttons{
+   
+  }
+  .traveller-buttons>.one{
+    display: none;
+  }
+  .traveller-buttons>.three{
+    display: none;
+  }
+}
 
 
-       
-      } 
-    
