--- a/styles/style.css
+++ b/styles/style.css
@@ -10,41 +10,42 @@
     border: 1px solid green;
   } */
   
-  #main_container {
+  /* #main_container {
     display: flex;
+  } */
+  body{
+    margin: 0;
+    padding: 0;
+    background-color: #e78874 ;
   }
-  
   .container {
-    margin-bottom: 80px;
-  }
+    width: 90%;
+    margin-bottom: 8px;
   
+   
+  }
+  @font-face {
+    font-family: "Doodle Font";
+    src: url("kimberly-geswein_kg-already-home/KGAlreadyHome.ttf");
+  }
+  @font-face {
+    font-family: "Sigmar";
+    src: url("Sigmar_one/SigmarOne-Regular.ttf");
+  }
+  .column>h1{
+    font-family: "Sigmar", cursive;
+    color: white;
+    font-size: 120px;
+    text-shadow: 6px 6px 0 rgba(0, 0, 0, 0.5), 6px 6px 0 rgba(0, 0, 0, 0.5);
+  }
+
   .sidebar-one {
     border: 1px solid #e1e1e1;
     border-radius: 4px;
     padding: 16px;
   }
   
-  .student {
-    width: 260px;
-    height: 450px;
-    border: 1px solid gray;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5px;
-  }
-  
-  .student img {
-    width: 80%;
-    height: 30%;
-    border-bottom: 1px solid gray;
-  }
-  
-  .student div {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-  }
+
   
   /* cards */
   
@@ -56,10 +57,13 @@
     gap: 4%;
   }
   
-  .card:not(:last-child) {
+  .card {
     margin-bottom: 16px;
+    border-radius: 20px;
+    box-shadow: 10px 9px black;
+    border: 1px solid transparent;
   }
-  
+  /* :not(:last-child) */
   @media (min-width: 576px) {
     .card {
       flex-basis: 38%;
@@ -74,16 +78,14 @@
   
   /* individual card  */
   .card {
-    background-color: white;
+    background-color: rgb(241, 236, 236);
     font-size: 20px;
     padding: 15px;
-  
-    border: 1px solid #e1e1e1;
-    border-radius: 4px;
   
     display: flex;
     flex-direction: column;
     gap: 4%;
+    
   }
   
   .card__item:not(:last-child) {
@@ -91,16 +93,16 @@
   }
   
   .card__img {
-    margin-bottom: 8px;
-    width: 20px;
-
+    /* margin-bottom: 8px; */
+    width: 40%;
+    border-radius: 10px;
   }
   
   .card__img>img {
     height: 100px;
-    width: 100%;
+    /* width: 100%; */
     object-fit: cover;
-
+    border-radius: 10px;
   }
   
   .card__link {
@@ -155,4 +157,36 @@
     margin-bottom: 5px;
   }
   
+  #pagination{
+    display: flex;
+    flex-basis: 20%;
+    width: 20%;
+    margin: auto;
+    text-align: center;
+    justify-content: space-evenly;
+  }
+  
+  /* nav */
+
+  nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    padding: 50px 130px;
+    font-weight: bold;
+ /* border: 1px solid black; */
+ width: 80%;
+margin: auto;
+   /* position: absolute; */
+
+
+  }   
+
+  nav>div:nth-child(2){
+    display: flex;
+    justify-content: space-evenly;
+    width: 40%;
+   }
+   
   
