--- a/styles/landingPage.css
+++ b/styles/landingPage.css
@@ -19,6 +19,10 @@
     padding: 10px 5px 10px 5px;
     
   }
+  .card:hover{
+    cursor: pointer;
+  }
+  
   .pattern {
     background-color: #dd6765;
     width: 90%;
@@ -66,11 +70,7 @@
     font-size: 120px;
     text-shadow: 6px 6px 0 rgba(0, 0, 0, 0.5), 6px 6px 0 rgba(0, 0, 0, 0.5);
   }
-  .pattern .text > h3:nth-child(2) {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 30px;
-  }
+  
   .pattern .location {
     grid-column-start: 3;
     grid-column-end: 4;
@@ -172,6 +172,15 @@
     align-items: center;
     position: relative;
   }
+  .location>h3:nth-child(1){
+    font-family: "Sigmar",cursive;
+    color: black;
+    font-size: 20px;
+  }
+  .text>h3:nth-child(2){
+    font-family: "Sigmar",cursive;
+    font-size: 40px;
+  }
   .location > img {
     height: 100px;
     width: 20%;
@@ -192,12 +201,7 @@
   .location input:focus {
     outline: none;
   }
-  .location > h3:nth-child(1) {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-weight: bolder;
-    font-size: 20px;
-  }
+ 
   .news input:focus {
     outline: none;
   }
@@ -314,6 +318,8 @@
     border-radius: 20px;
     border: 1px solid transparent;
   }
+
+
   /******TRAVELLER SECTION STYLING*********/
   .traveller-cont {
     width: 90%;
@@ -497,7 +503,7 @@
     margin: auto;
     position: absolute;
     margin-top: -620px;
-    border: 1px solid black
+  
   }
   .banner-text {
     display: grid;
@@ -802,15 +808,138 @@
     /* background-color: #fff; */
     transform: rotate(45deg) translate(-50%, -50%);
   }
-  /* .corner-pattern::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 50px;
-    background-image: linear-gradient(45deg, #FFFFFF 25%, transparent 25%, transparent 75%, #FFFFFF 75%), linear-gradient(-45deg, #FFFFFF 25%, transparent 25%, transparent 75%, #FFFFFF 75%);
-    background-size: 30px 30px;
-    z-index: -1;
-  } */
 
+
+  /* testing animation */
+
+.inline-photo{
+ opacity: 0;
+ transform: translateY(4em);
+ transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+ opacity .3s .5s ease-out;
+ will-change:transform,opacity
+
+} 
+
+
+.inline-photo.is-visible{
+  opacity: 1;
+  transform: rotateZ(0deg);
+}
+
+.main-heading>p{
+  opacity: 0;
+  transition: opacity .5s .25s ease-out;
+}
+.main-heading>p.is-visible{
+opacity: 1;
+
+}
+
+
+
+.text{
+  opacity: 0;
+  transition: opacity .5s .25s ease-out;
+ 
+}
+.text.is-visible{
+  opacity: 1;
+}
+
+.croodles{
+  transform: translate(-3%,calc(-25%+1em));
+
+}
+
+.is-visible .croodles{
+  transform: translate(-3%,-25%);
+}
+
+.croodles{
+  transition: transform 4s .35s cubic-bezier(0,1,.3,1);
+  will-change: transform;
+}
+
+
+.heading{
+  transform: translate(-50%,calc(-25%+1em));
+}
+
+.is-visible.heading{
+  transform: translate(-3%,-25%);
+}
+
+.heading{
+  transition: transform 4s .35s cubic-bezier(0,1,.3,1);
+  will-change: transform;
+}
+
+.trav{
+  opacity: 0;
+  transition: opacity .5s .25s ease-out;
+}
+.is-visible.trav{
+  opacity: 1;
+}
+
+/* testing drop down animation */
+.burgerMenu{
+  transition: all 1s ease-in;
+}
+
+button{
+  transition: 0.3s;
+}
+/* for changing color of button */
+/* .drop-btn{
+  transition: 0.3s;
+} */
+
+
+/* testing pop up */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+ 
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+  display: none;
+  align-items: center;
+  
+}
+
+.popup.active {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
+
+.popup-content {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  width: 20%;
+  margin: auto;
+  margin-top: 300px;
+}
+
+.close-btn {
+  background: #dd6765;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+}
