--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,8 @@ button:hover{
   border: 2px solid black;
 }
 .line-break{
-  background-color: #dd6765;
+  /* background-color: #dd6765; */
+  background-image: url("footer.png");
   height: 50px;
   width: 90%;
   margin: auto;
@@ -44,6 +45,7 @@ button:hover{
   border: 2px solid black;
 }
 
+
 button {
   margin-left: 10px;
   margin-right: 10px;
@@ -51,6 +53,7 @@ button {
   color: beige;
   width: 120px;
   height: 40px;
+  border: 1px solid transparent;
 }
 #b1 {
   background-color: black;
@@ -58,11 +61,72 @@ button {
 #b2 {
   background-color: #e22901;
 }
+#c1{
+  background-color: black;
+}
+
+/* button animation */
+
+button{
+  margin-right: 10px;
+  background-color: #e12a00;
+  border:1px solid black;
+  color: #fff;
+}
+button:link,:visited{
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: absolute;
+}
+
+button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
+button:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+} 
+
+/* button {
+    animation: moveInBottom 3s ease-out;
+    animation-fill-mode: backwards;
+} */
+
+/* @keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+} */
+
+
 footer {
   position: relative;
   width: 90%;
   margin: auto;
-  background-color: #dd6765;
+  /* background-color: #dd6765; */
+  background-image: url("footer.png");
   padding: 50px 100px;
 
   font-weight: bold;
@@ -146,7 +210,12 @@ nav>div:nth-child(2){
   width: 40%;
 
 }
-
+nav h2{
+  font-family: "Sigmar",cursive;
+}
+nav h2:hover{
+  cursor: pointer;
+}
 .circle {
   width: 15px;
   height: 15px;
