--- a/styles/landingPage.css
+++ b/styles/landingPage.css
@@ -265,10 +265,10 @@
     position: relative;
   }
   .input-image {
-    width: 35px;
+    width: 30px;
     height: 30px;
     border-radius: 30px;
-    overflow: hidden; /* hides any part of the image that goes outside the container */
+    /* overflow: hidden; hides any part of the image that goes outside the container */
     /* max-width: 100%;
       max-height: 100%; */
     position: absolute;
@@ -279,8 +279,8 @@
     /* max-width: 100%;
     max-height: 100%; */
     border-radius: 20px;
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     /* object-fit: contain; */
   }
   
@@ -310,7 +310,7 @@
   .heart {
     margin-top: -100px;
     height: 60px;
-    transform: rotate(25deg);
+    transform: rotate(25deg);  
   }
   .heart img {
     height: 100%;
@@ -1038,4 +1038,6 @@ button{
   margin-top: 10px;
   cursor: pointer;
 }
+
+
 
