--- a/styles/product.css
+++ b/styles/product.css
@@ -2,7 +2,19 @@ body{
     margin: 0px;
     padding: 0px;
     background-color: #dd6765;
+    /* background-color: rgb(227, 223, 223); */
     box-sizing: border-box;
+}
+@font-face {
+    font-family: "Doodle Font";
+    src: url("kimberly-geswein_kg-already-home/KGAlreadyHome.ttf");
+  }
+  @font-face {
+    font-family: "Sigmar";
+    src: url("Sigmar_one/SigmarOne-Regular.ttf");
+  }
+.container{
+    padding:30px;
 }
 #title{
     position: relative;
@@ -13,28 +25,30 @@ body{
 
 .card{
     position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     
     width: 70%;
     margin: auto;
-    margin-bottom: 20px;
-background-color: #E89792;
+    margin-bottom: 40px;
+/* background-color: #E89792; */
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
 }
 
 .card__img{
     position: relative;
     /* margin: 10px 10px 0px 10px; */
+    border-radius:10px;
 }
 
 .card__img img{
     position: relative;
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 300px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    border-radius: 10px;
     -o-object-fit: cover;
     object-fit: cover;
 }
@@ -61,6 +75,12 @@ button:hover{
     box-shadow: 0px 0px 5px 2px rgb(114, 22, 7);
     background-color: rgb(224, 32, 32);
 }
+nav>div>h2{
+    font-family: "Sigmar",cursive;
+}
+nav{
+    background-image: url(water.png);
+}
 .nav1{
     position: relative;
     background-image: linear-gradient(90deg,#b7243a,#43264e);
@@ -75,7 +95,6 @@ button:hover{
     gap: 20px;
     margin: auto;
     margin-bottom: 20px;
-    margin-top: 20px;
     justify-content: center;
     align-items: center;
 
@@ -157,3 +176,144 @@ input[type=text] {
        
     }
 }
+
+/* footer styling */
+button:hover{
+    cursor: pointer;
+  }
+  #log-div {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e22901;
+    margin-top: 20px;
+    width: 260px;
+    height: 50px;
+    border-radius: 50px;
+    box-shadow: -10px 6px;
+    border: 2px solid black;
+  }
+  .line-break{
+    /* background-color: #dd6765; */
+    background-image: url("footer.png");
+    height: 50px;
+    width: 90%;
+    margin: auto;
+    padding: 40px;
+  }
+  .line-break>hr{
+    border: none;
+    height: 1px;
+    background-color: #4c221a;
+    margin: 0;
+    padding: 0;
+  }
+  
+  #log-div>button:nth-child(1){
+    border: 1px solid transparent;
+  }
+  #log-div>button:nth-child(2){
+    border: 2px solid black;
+  }
+  
+/*   
+button {
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 50px;
+    color: beige;
+    width: 320px;
+    height: 40px;
+    border: 1px solid transparent;
+  } */
+
+  #b1 {
+    background-color: black;
+  }
+  #b2 {
+    background-color: #e22901;
+  }
+  #c1{
+    background-color: black;
+  }
+  
+  footer {
+    position: relative;
+    width: 90%;
+    margin: auto;
+    /* background-color: #dd6765; */
+    background-image: url("footer.png");
+    padding: 50px 100px;
+  
+    font-weight: bold;
+  }
+  footer .container1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    gap: 20px;
+  }
+  
+  /* sec buttons */
+  
+  #sec-btns{
+    display: grid;
+    flex-direction: column;
+    
+  }
+  #b3{
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 50px;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    border: 1px solid black;
+  }
+  footer .container1 .sec h2 {
+    position: relative;
+    color: #333;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+  footer .container1 .sec p {
+    color: #564f4f;
+  }
+  footer .container1 .links {
+    position: relative;
+  }
+  
+  footer .container1 .links ul li {
+    list-style: none;
+  }
+  
+  footer .container1 .links ul li a {
+    color: #564f4f;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+
+  
+  .loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #f35f5e;
+    position: absolute;
+    top: 70%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  /* loader end */
+  
