fixed some styles

--- a/styles/product.css
+++ b/styles/product.css
@@ -194,15 +194,15 @@ button:hover{
     box-shadow: -10px 6px;
     border: 2px solid black;
   }
-  .line-break{
+  #line-break{
     /* background-color: #dd6765; */
     background-image: url("footer.png");
     height: 50px;
-    width: 90%;
+    width: 100%;
     margin: auto;
     padding: 40px;
   }
-  .line-break>hr{
+  #line-break>hr{
     border: none;
     height: 1px;
     background-color: #4c221a;
@@ -238,11 +238,10 @@ button {
     background-color: black;
   }
   
-  footer {
+  #footer {
     position: relative;
-    width: 90%;
+    width: 100%;
     margin: auto;
-    /* background-color: #dd6765; */
     background-image: url("footer.png");
     padding: 50px 100px;
   
