--- a/styles/product.css
+++ b/styles/product.css
@@ -297,7 +297,7 @@ button {
 
   
   .loader {
-    border: 5px solid #f3f3f3;
+    border: 5px solid white;
     border-radius: 50%;
     border-top: 5px solid #f35f5e;
     position: absolute;
