--- a/styles/index.css
+++ b/styles/index.css
@@ -192,7 +192,7 @@ footer .container1 .links ul li a {
   font-size: 24px;
   color: rgb(59, 55, 55);
   cursor: pointer;
-  
+  border-radius: 20px;
 }
 nav{
   display: flex;
